--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Locus HR Solutions</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="Top">
@@ -35,7 +38,7 @@
                     <li><a href="#services">Services</a></li>
                     <li><a href="#portfolio">Portfolio</a></li>
                     <li><a href="#contact">Contact</a></li>
-                    <li><a href="#blog">Blog</a></li>
+                    <li><a href="#blog" class="no-border">Blog</a></li>
                 </ul>
             </nav>
             <div class="hamburger-icon" onclick="toggleNavPanel()">
@@ -58,10 +61,13 @@
     <!-- Home Section -->
     <section id="home" class="hero-section">
         <div class="hero-content">
-            <h2>Welcome to Locus HR Solutions</h2>
-            <p>Your Trusted Partner in Human Resource Excellence</p>
-            <a href="#about" class="btn">Learn More</a>
-        </div>
+            <div class="hero-left">
+                <h2>Welcome to Locus HR Solutions</h2>
+                <p>Your Trusted Partner in Human Resource Excellence</p>
+            </div>
+            <div class="hero-right">
+                <a href="#about" class="btn">Learn More</a>
+            </div>
     </section>
 
     <!-- About Us Section -->
