--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
             <div class="hero-left">
                 <h2>Welcome to Locus HR Solutions</h2>
                 <p>Your Trusted Partner in Human Resource Excellence</p>
+                <a href="#about" class="btnn">Learn More</a>
             </div>
             <div class="hero-right">
                 <a href="#about" class="btn">Learn More</a>
