Refactor top bar and preloader in styles.css for improved layout and responsiveness

--- a/index.html
+++ b/index.html
@@ -10,9 +10,12 @@
 <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"></head>
 <body>
-    <div class="Top">
-        <span class="TopTxt">Welcome to Locus Group Ghana since 2005</span>
+    <div class="top-bar">
+        <marquee class="TopTxt" behavior="scroll" direction="left">
+            Welcome to Locus Group Ghana since 2005
+        </marquee>
     </div>
+    
     <div class="preloader">
         <div class="left">        
             <img src="Images/logo1.jpeg" alt="LocustLogo" class="LocustLogo">
@@ -28,6 +31,7 @@
             </div>
         </div>
     </div>
+    
     <!-- Navbar -->
     <header class="navbar">
         <div class="container">
