--- a/index.html
+++ b/index.html
@@ -5,43 +5,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Locus HR Solutions</title>
     <link rel="stylesheet" href="styles.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"></head>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+</head>
 <body>
     <div class="top-bar">
         <marquee class="TopTxt" behavior="scroll" direction="left">
             Welcome to Locus Group Ghana since 2005
         </marquee>
     </div>
-    
-    <div class="preloader">
-        <div class="left">        
-            <img src="Images/logo1.jpeg" alt="LocustLogo" class="LocustLogo">
-        </div>
-        <div class="right">
-            <div class="teleimg">
-                <img src="Images/phone.png" alt="phone icon">
-            </div>
-            <div class="right-txt">
-                <a href="tel:+233540116781"><span class="number">+233 5401 167 81</span> </a>
-                <br>
-                <a href="mailto:info@locustgroupgh.com">info@locustgroupgh.com</a>
-            </div>
-        </div>
-    </div>
-    
+
     <!-- Navbar -->
     <header class="navbar">
         <div class="container">
+            <div class="left">
+                <img src="Images/logo1.jpeg" alt="LocustLogo" class="LocustLogo">
+            </div>
             <nav>
                 <ul class="nav-links">
                     <li><a href="#home">HOME</a></li>
                     <li><a href="#about">ABOUT US</a></li>
                     <li><a href="#services">SERVICES</a></li>
                     <li><a href="#portfolio">PORTFOLIO</a></li>
-                    <li><a ABOUTcontact">CONTACT</a></li>
+                    <li><a href="#contact">CONTACT</a></li>
                     <li><a href="#blog" class="no-border">BLOG</a></li>
                 </ul>
             </nav>
@@ -73,6 +59,7 @@
             <div class="hero-right">
                 <a href="#about" class="btn">Learn More</a>
             </div>
+        </div>
     </section>
 
     <!-- About Us Section -->
