Refactor image file paths and update styles.css for improved performance and responsiveness

--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
                     <button class="read-more-btn" 
                             data-title="The Future of Work" 
                             data-content="Technological advancements and changing workforces are rapidly reshaping the future of work."
-                            data-image="https://via.placeholder.com/600x400">Read More</button>
+                            data-image="Assets/The-Future-of-Work2.jpg">Read More</button>
                 </div>
             </div>
         </div>
